<resources>
    <string name="app_name">Found It</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- app bar icons -->
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>

    <!-- Activity Screen Titles -->
    <string name="title_activity_all_room">All Rooms</string>
    <string name="title_activity_create_room">Create Room</string>
    <string name="title_activity_main_room">Current Room</string>

    <!-- buttons -->
    <string name="create_room_button"> Create Room </string>
    <string name="title_activity_add_item"> Create New Item </string>

    <!-- Add Item Activity -->
    <string name="item_name_title">Item Name</string>
    <string name="item_created_title">Created On</string>
    <string name="item_desc_title">Item Description</string>
    <string name="item_room_title">Select A Room</string>
    <string name="item_room_button">Select a room...</string>
    <string name="item_create_item">Create Item</string>


    <!-- Create Room Activity -->
    <string name="room_name_title">Room Name</string>
    <string name="title_activity_main_item">MainItemActivity</string>

    <!-- Main Item Activity -->
    <string name="mitem_desc_title">Description</string>
    <string name="mitem_loc_title">Location</string>

    <!-- All Items Activity -->
    <string name="title_activity_all_items">All Items</string>
    <string name="title_activity_pins">Pins</string>

    <!-- Search Activity -->
    <string name="action_search">Search Items</string>
    <string name="search_hint">Search for an item</string>
    <string name="title_activity_searchable">Item Search Results</string>

</resources>
