<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_36dp"
        android:title="@string/delete"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_36dp"
        android:title="@string/search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass = "android.widget.SearchView"/>
</menu>
