<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jmaeng.found_it.AddItemActivity"
    tools:showIn="@layout/app_bar_add_item">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/itemImageButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/itemNameTitle"
        android:layout_alignBottom="@+id/itemCreationField" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/item_name_title"
        android:id="@+id/itemNameTitle"
        android:layout_marginEnd="67dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/itemNameField"
        android:layout_below="@+id/itemNameTitle"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/itemNameTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/item_created_title"
        android:id="@+id/itemCreation"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/itemNameField"
        android:layout_toEndOf="@+id/itemImageButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/itemCreationField"
        android:layout_below="@+id/itemCreation"
        android:layout_alignEnd="@+id/itemNameField"
        android:layout_alignStart="@+id/itemCreation" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/item_desc_title"
        android:id="@+id/itemDescTitle"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/itemImageButton"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/itemDescField"
        android:layout_below="@+id/itemDescTitle"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/itemCreationField" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/item_room_title"
        android:id="@+id/itemRoomTitle"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/itemDescField"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_room_button"
        android:id="@+id/itemRoomButton"
        android:layout_below="@+id/itemRoomTitle"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/itemCreationField" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_create_item"
        android:id="@+id/itemCreateItem"
        android:layout_below="@+id/itemRoomButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp" />

</RelativeLayout>
